--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "async": "^2.0.1",
     "body-parser": "^1.15.2",
+    "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "crypto": "0.0.3",
     "debug": "~2.2.0",
@@ -19,7 +20,9 @@
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.10",
     "morgan": "^1.7.0",
+    "nconf": "^0.8.4",
     "serve-favicon": "~2.3.0",
+    "socket.io": "^1.4.8",
     "util": "^0.10.3",
     "winston": "^2.2.0"
   }
